improve kohya script

--- a/ipynb/Kohya/Kohya-for-OpenBayes.ipynb
+++ b/ipynb/Kohya/Kohya-for-OpenBayes.ipynb
@@ -156,6 +156,7 @@
         "\n",
         "tools_to_install = [\n",
         "    \"iputils-ping\",\n",
+        "    'lsof'\n",
         "]\n",
         "\n",
         "installed_libraries = subprocess.run([\"pip\", \"freeze\"], capture_output=True).stdout.decode().split(\"\\n\")\n",
@@ -719,134 +720,21 @@
     },
     {
       "cell_type": "markdown",
-      "id": "7e4a51a4-5157-42d5-a80f-c54457db530d",
+      "id": "35be05d6-8983-4bd9-b25c-51620a5cee84",
       "metadata": {},
       "source": [
-        "## \u5b9a\u4e49\u6a21\u578b\u6302\u8f7d\u51fd\u6570"
+        "# \u91cd\u88c5accelerate"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "0dd662aa-6bcf-4e1a-83ae-067b9849517a",
+      "id": "502df3f9-d2a4-426b-93d7-0d2d37d1cb09",
       "metadata": {},
       "outputs": [],
       "source": [
-        "import os\n",
-        "import hashlib\n",
-        "from func.checksum import generate_checksum,find_folder\n",
-        "\n",
-        "def create_symlink(source_path, symlink_path, symlink_name):\n",
-        "    # \u5c06\u8f6f\u94fe\u63a5\u8def\u5f84\u62fc\u63a5\u6210\u5b8c\u6574\u7684\u6587\u4ef6\u8def\u5f84\n",
-        "    symlink_file = f\"{symlink_path}/{symlink_name}\"\n",
-        "\n",
-        "    # \u5982\u679c\u8f6f\u94fe\u63a5\u6587\u4ef6\u5b58\u5728\uff0c\u5219\u5148\u5220\u9664\u5b83\n",
-        "    if os.path.exists(symlink_file):\n",
-        "        os.remove(symlink_file)\n",
-        "\n",
-        "    # \u521b\u5efa\u8f6f\u94fe\u63a5\n",
-        "    os.symlink(source_path, symlink_file)\n",
-        "\n",
-        "    # \u9a8c\u8bc1\u8f6f\u94fe\u63a5\u662f\u5426\u6210\u529f\u521b\u5efa\n",
-        "    if os.path.islink(symlink_file):\n",
-        "        # print(f\"{symlink_file} \u662f\u4e00\u4e2a\u7b26\u53f7\u94fe\u63a5\u3002\")\n",
-        "        print(f\"\\033[1m\\033[92m{symlink_file}\\033[0m \u279c \\033[34m{os.readlink(symlink_file)}\\033[0m\")\n",
-        "    else:\n",
-        "        print(f\"{symlink_file} \u4e0d\u662f\u4e00\u4e2a\u7b26\u53f7\u94fe\u63a5\u3002\")\n",
-        "\n",
-        "def find_file(root_dir, target_name):\n",
-        "    paths = []\n",
-        "    for dirpath, dirnames, filenames in os.walk(root_dir, topdown=True):\n",
-        "        if target_name in filenames:\n",
-        "            path = os.path.join(dirpath, target_name)\n",
-        "            paths.append(path)\n",
-        "        if len(dirpath.split(os.sep)) - len(root_dir.split(os.sep)) >= 2:\n",
-        "            # \u5982\u679c\u76ee\u5f55\u6df1\u5ea6\u8d85\u8fc73\u5c42\uff0c\u5219\u4e0d\u8fdb\u5165\u5b50\u76ee\u5f55\uff0c\u8df3\u8fc7\u8fd9\u4e00\u5c42\n",
-        "            del dirnames[:]\n",
-        "    paths.sort(key=len)\n",
-        "    return paths if paths else None\n",
-        "\n",
-        "def check_file(file_path, size):\n",
-        "    return os.path.exists(file_path) and os.path.getsize(file_path) == size\n",
-        "\n",
-        "def check_model_and_make_symbollink(model_name, models_dir, use_symlink=True):\n",
-        "    global webUIDir\n",
-        "    try:\n",
-        "        webUIDir\n",
-        "        if len(webUIDir)==0:\n",
-        "            webUIDir = getWebUIDir()\n",
-        "    except:\n",
-        "        webUIDir = getWebUIDir()\n",
-        "    # print(webUIDir)\n",
-        "        \n",
-        "    if os.path.isabs(models_dir):  # \u5224\u65admodels_dir\u662f\u5426\u4e3a\u7edd\u5bf9\u8def\u5f84\n",
-        "        abs_models_dir = models_dir\n",
-        "    else:\n",
-        "        abs_models_dir = os.path.realpath(os.path.join(webUIDir, models_dir))\n",
-        "    \n",
-        "    if not os.path.exists(abs_models_dir):\n",
-        "        os.makedirs(abs_models_dir)\n",
-        "        print(f'\u521b\u5efa\u76ee\u5f55 {abs_models_dir}')\n",
-        "\n",
-        "    model_path = os.path.realpath(os.path.join(abs_models_dir, model_name))\n",
-        "\n",
-        "    if env_name == 'AutoDL':\n",
-        "        \n",
-        "        pre_nas_list = [\n",
-        "            '/root/autodl-nas',\n",
-        "            '/root/autodl-fs',\n",
-        "            # '/root/autodl-pub',\n",
-        "            ]\n",
-        "        \n",
-        "        nas_list = []\n",
-        "        \n",
-        "        for n in pre_nas_list:\n",
-        "            if os.path.exists(n):\n",
-        "                nas_list.append(n)\n",
-        "        # print(nas_list)\n",
-        "        \n",
-        "        for i in nas_list:  \n",
-        "            file_list = find_file(f'{i}', model_name)\n",
-        "            if file_list:\n",
-        "                break\n",
-        "            else:\n",
-        "                continue\n",
-        "    elif env_name == 'OpenBayes':\n",
-        "        for i in range(0, 5):  # \u5728input\u4e2d\u8fdb\u884c\u641c\u7d22\n",
-        "            file_list = find_file(f'/input{i}', model_name)\n",
-        "            if file_list:\n",
-        "                break\n",
-        "            else:\n",
-        "                continue\n",
-        "\n",
-        "    if file_list:\n",
-        "        target_model_dist = file_list[0]\n",
-        "\n",
-        "        print(target_model_dist)\n",
-        "\n",
-        "        if os.path.exists(model_path) and check_file(model_path, os.path.getsize(target_model_dist)):\n",
-        "            print(f'{model_name}\u7684\u6a21\u578b\u5df2\u7ecf\u5728\u76ee\u6807\u4f4d\u7f6e\uff0c\u65e0\u9700\u521b\u5efa\u8f6f\u8fde\u63a5')\n",
-        "        else:\n",
-        "            if use_symlink:\n",
-        "                # create symbolic link\n",
-        "                create_symlink(\n",
-        "                    source_path=target_model_dist,  # openbayes \u7279\u6709\u7684\u76ee\u5f55\uff0c\u662f\u5916\u90e8\u6570\u636e\u96c6\u6302\u8f7d\u5230\u5f53\u524d\u955c\u50cf\u7684\u76ee\u5f55\uff0c\u7f16\u53f7\u4ece0~4\n",
-        "                    symlink_path=abs_models_dir,  # fast-dreambooth.ipynb\u7684 model download cell\u4e00\u822c\u4e0b\u8f7d\u6a21\u578b\u7684\u8def\u5f84\n",
-        "                    symlink_name=model_name  # \u6a21\u578b\u540d\u79f0\n",
-        "                )\n",
-        "                print('\u521b\u5efa\u7b26\u53f7\u94fe\u63a5\u5b8c\u6210\uff01')\n",
-        "            else:\n",
-        "                # copy file\n",
-        "                if not os.path.exists(model_path) or not check_file(model_path, os.path.getsize(target_model_dist)):\n",
-        "                    print('\u6b63\u5728\u8fdb\u884c\u590d\u5236...')\n",
-        "                    !cp $target_model_dist $abs_models_dir/$model_name\n",
-        "                    print('\u590d\u5236\u5b8c\u6210\uff01')\n",
-        "                else:\n",
-        "                    print(f'{model_name}\u7684\u6a21\u578b\u5df2\u7ecf\u5728\u76ee\u6807\u4f4d\u7f6e\uff0c\u65e0\u9700\u590d\u5236')\n",
-        "        return os.path.dirname(target_model_dist)\n",
-        "    else:\n",
-        "        print(f'\u4e0d\u5b58\u5728{model_name}')\n",
-        "        return None\n"
+        "!pip uninstall accelerate -y\n",
+        "!pip install accelerate"
       ]
     },
     {
@@ -1051,10 +939,55 @@
     },
     {
       "cell_type": "markdown",
+      "id": "bb8e11bb-fd61-4042-afac-3b6a10a18534",
+      "metadata": {},
+      "source": [
+        "# \u91cd\u542ftensorboard\u670d\u52a1"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "bd4bb48e-6a52-44f4-b55e-75097b4fded0",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "!kill $(lsof -t -i:6006)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "2869ea2b-340d-406f-b8f8-963bfdb593ff",
       "metadata": {},
       "source": [
         "# <i class=\"fa fa-rocket\"></i> \u542f\u52a8Kohya_ss"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "9f484e38-f5b2-4546-8244-cf0c0361de14",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import psutil\n",
+        "\n",
+        "port = 8877\n",
+        "\n",
+        "# \u904d\u5386\u6240\u6709\u6b63\u5728\u8fd0\u884c\u7684\u8fdb\u7a0b\n",
+        "for proc in psutil.process_iter():\n",
+        "    try:\n",
+        "        # \u83b7\u53d6\u8fdb\u7a0b\u7684\u7aef\u53e3\u4fe1\u606f\n",
+        "        connections = proc.connections()\n",
+        "        for conn in connections:\n",
+        "            if conn.status == psutil.CONN_LISTEN and conn.laddr.port == port:\n",
+        "                print(f\"\u627e\u5230\u5728\u7aef\u53e3 {port} \u4e0a\u8fd0\u884c\u7684\u8fdb\u7a0b\uff1a{proc.pid}\")\n",
+        "                # \u6740\u6389\u8fdb\u7a0b\n",
+        "                proc.kill()\n",
+        "                print(f\"\u5df2\u6210\u529f\u6740\u6b7b\u8fdb\u7a0b {proc.pid}\")\n",
+        "                break\n",
+        "    except (psutil.NoSuchProcess, psutil.AccessDenied, psutil.ZombieProcess):\n",
+        "        pass"
       ]
     },
     {
@@ -1099,37 +1032,17 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "!/usr/local/bin/python \\\n",
-        "\"finetune/make_captions.py\" \\\n",
-        "--batch_size=\"1\" \\\n",
-        "--num_beams=\"1\" \\\n",
-        "--top_p=\"0.9\" \\\n",
-        "--max_length=\"75\" \\\n",
-        "--min_length=\"5\" \\\n",
-        "--beam_search \\\n",
-        "--caption_extension=\".txt\" \\\n",
-        "\"/openbayes/home/training_sessions/LoRA/image\" \\\n",
-        "--caption_weights=\"https://storage.googleapis.com/sfr-vision-language-research/BLIP/models/model_large_caption.pth\""
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "502df3f9-d2a4-426b-93d7-0d2d37d1cb09",
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "!pip install accelerate\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "68b0735c-f3c0-4b7e-a67a-9953883151b0",
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "!accelerate"
+        "# !/usr/local/bin/python \\\n",
+        "# \"finetune/make_captions.py\" \\\n",
+        "# --batch_size=\"1\" \\\n",
+        "# --num_beams=\"1\" \\\n",
+        "# --top_p=\"0.9\" \\\n",
+        "# --max_length=\"75\" \\\n",
+        "# --min_length=\"5\" \\\n",
+        "# --beam_search \\\n",
+        "# --caption_extension=\".txt\" \\\n",
+        "# \"/openbayes/home/training_sessions/LoRA/image\" \\\n",
+        "# --caption_weights=\"https://storage.googleapis.com/sfr-vision-language-research/BLIP/models/model_large_caption.pth\""
       ]
     },
     {
