--- a/nbfunc/mounter.ipynb
+++ b/nbfunc/mounter.ipynb
@@ -15,16 +15,19 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "def find_file(root,target):\n",
-        "    # \u53ef\u4ee5\u5728\u547d\u4ee4\u540e\u9762\u52a0\u4e0a 2>/dev/null\uff0c\u8fd9\u6837\u4f1a\u5c06\u6807\u51c6\u9519\u8bef\u8f93\u51fa\u91cd\u5b9a\u5411\u5230/dev/null\uff0c\u5373\u5ffd\u7565\u9519\u8bef\u4fe1\u606f\u3002\n",
-        "    target_list = !find $root -name $target 2>/dev/null\n",
-        "    # target_list = list(filter(lambda x: x.endswith('.whl'), target))\n",
-        "    print(target_list)\n",
-        "    if target_list:\n",
-        "        target_path = target_list[0]\n",
-        "        return target_path\n",
-        "    else:\n",
-        "        return None\n",
+        "import os\n",
+        "\n",
+        "def find_file(root_dir, target_name):\n",
+        "    paths = []\n",
+        "    for dirpath, dirnames, filenames in os.walk(root_dir, topdown=True):\n",
+        "        if target_name in filenames:\n",
+        "            path = os.path.join(dirpath, target_name)\n",
+        "            paths.append(path)\n",
+        "        if len(dirpath.split(os.sep)) - len(root_dir.split(os.sep)) >= 2:\n",
+        "            # \u5982\u679c\u76ee\u5f55\u6df1\u5ea6\u8d85\u8fc73\u5c42\uff0c\u5219\u4e0d\u8fdb\u5165\u5b50\u76ee\u5f55\uff0c\u8df3\u8fc7\u8fd9\u4e00\u5c42\n",
+        "            del dirnames[:]\n",
+        "    paths.sort(key=len)\n",
+        "    return paths if paths else None\n",
         "\n",
         "def find_file_in_input(target):\n",
         "    # \u904d\u5386 input0\u3001input1\u3001input2\u3001input3\u3001input4 \u4e94\u4e2a\u76ee\u5f55\n",
@@ -53,27 +56,35 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "def create_symlink(source_path, symlink_path, symlink_name):\n",
+        "import shutil\n",
+        "\n",
+        "def create_symlink(source_path, symlink_path, symlink_name=None):\n",
+        "    # \u5982\u679c\u6ca1\u6709\u6307\u5b9asymlink_name\uff0c\u5219\u81ea\u52a8\u6c42\u89e3\n",
+        "    if not symlink_name:\n",
+        "        symlink_name = os.path.basename(symlink_path)\n",
+        "        symlink_path = os.path.dirname(symlink_path)\n",
+        "\n",
         "    # \u5c06\u8f6f\u94fe\u63a5\u8def\u5f84\u62fc\u63a5\u6210\u5b8c\u6574\u7684\u6587\u4ef6\u8def\u5f84\n",
-        "    symlink_file_path = f\"{symlink_path}/{symlink_name}\"\n",
+        "    symlink_file = os.path.join(symlink_path, symlink_name)\n",
         "\n",
         "    # \u5982\u679c\u8f6f\u94fe\u63a5\u6587\u4ef6\u5b58\u5728\uff0c\u5219\u5148\u5220\u9664\u5b83\n",
-        "    if os.path.exists(symlink_file_path):\n",
-        "        os.remove(symlink_file_path)\n",
+        "    if os.path.exists(symlink_file):\n",
+        "        if os.path.islink(symlink_file):\n",
+        "            os.unlink(symlink_file)\n",
+        "        else:\n",
+        "            if os.path.isdir(symlink_file):\n",
+        "                shutil.rmtree(symlink_file)\n",
+        "            else:\n",
+        "                os.remove(symlink_file)\n",
         "\n",
         "    # \u521b\u5efa\u8f6f\u94fe\u63a5\n",
-        "    if not os.path.exists(symlink_path):\n",
-        "        os.makedirs(symlink_path)\n",
-        "    os.symlink(source_path, symlink_file_path)\n",
+        "    os.symlink(source_path, symlink_file)\n",
         "\n",
         "    # \u9a8c\u8bc1\u8f6f\u94fe\u63a5\u662f\u5426\u6210\u529f\u521b\u5efa\n",
-        "    if os.path.islink(symlink_file_path):\n",
-        "        print(f\"{symlink_file_path} \u662f\u4e00\u4e2a\u7b26\u53f7\u94fe\u63a5\u3002\")\n",
-        "        print(f\"\\033[1m\\033[92m{symlink_file_path}\\033[0m \u279c \\033[34m{os.readlink(symlink_file_path)}\\033[0m\")\n",
-        "        return symlink_file_path\n",
+        "    if os.path.islink(symlink_file):\n",
+        "        print(f\"\\033[1m\\033[92m{symlink_file}\\033[0m \u279c \\033[34m{os.readlink(symlink_file)}\\033[0m\")\n",
         "    else:\n",
-        "        print(f\"{symlink_file_path} \u4e0d\u662f\u4e00\u4e2a\u7b26\u53f7\u94fe\u63a5\u3002\")\n",
-        "        return None\n",
+        "        print(f\"{symlink_file} \u4e0d\u662f\u4e00\u4e2a\u7b26\u53f7\u94fe\u63a5\u3002\")\n",
         "\n",
         "def mount(source_path,symlink_path,symlink_name):\n",
         "    return create_symlink(\n",
@@ -102,6 +113,96 @@
       "metadata": {},
       "source": [
         "## \u641c\u7d22\u6587\u4ef6\u5939\u7ed3\u6784\u51fd\u6570"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "e5d63fe4-60ce-46dc-aa1e-3db15e190b08",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def check_file(file_path, size):\n",
+        "    return os.path.exists(file_path) and os.path.getsize(file_path) == size\n",
+        "\n",
+        "def check_model_and_make_symbollink(model_name, models_dir, use_symlink=True):\n",
+        "    global webUIDir\n",
+        "    try:\n",
+        "        webUIDir\n",
+        "        if len(webUIDir)==0:\n",
+        "            webUIDir = getWebUIDir()\n",
+        "    except:\n",
+        "        webUIDir = getWebUIDir()\n",
+        "    # print(webUIDir)\n",
+        "        \n",
+        "    if os.path.isabs(models_dir):  # \u5224\u65admodels_dir\u662f\u5426\u4e3a\u7edd\u5bf9\u8def\u5f84\n",
+        "        abs_models_dir = models_dir\n",
+        "    else:\n",
+        "        abs_models_dir = os.path.realpath(os.path.join(webUIDir, models_dir))\n",
+        "    \n",
+        "    if not os.path.exists(abs_models_dir):\n",
+        "        os.makedirs(abs_models_dir)\n",
+        "        print(f'\u521b\u5efa\u76ee\u5f55 {abs_models_dir}')\n",
+        "\n",
+        "    model_path = os.path.realpath(os.path.join(abs_models_dir, model_name))\n",
+        "\n",
+        "    if env_name == 'AutoDL':\n",
+        "        \n",
+        "        pre_nas_list = [\n",
+        "            '/root/autodl-nas',\n",
+        "            '/root/autodl-fs',\n",
+        "            # '/root/autodl-pub',\n",
+        "            ]\n",
+        "        \n",
+        "        nas_list = []\n",
+        "        \n",
+        "        for n in pre_nas_list:\n",
+        "            if os.path.exists(n):\n",
+        "                nas_list.append(n)\n",
+        "        # print(nas_list)\n",
+        "        \n",
+        "        for i in nas_list:  \n",
+        "            file_list = find_file(f'{i}', model_name)\n",
+        "            if file_list:\n",
+        "                break\n",
+        "            else:\n",
+        "                continue\n",
+        "    elif env_name == 'OpenBayes':\n",
+        "        for i in range(0, 5):  # \u5728input\u4e2d\u8fdb\u884c\u641c\u7d22\n",
+        "            file_list = find_file(f'/input{i}', model_name)\n",
+        "            if file_list:\n",
+        "                break\n",
+        "            else:\n",
+        "                continue\n",
+        "\n",
+        "    if file_list:\n",
+        "        target_model_dist = file_list[0]\n",
+        "\n",
+        "        print(target_model_dist)\n",
+        "\n",
+        "        if os.path.exists(model_path) and check_file(model_path, os.path.getsize(target_model_dist)):\n",
+        "            print(f'{model_name}\u7684\u6a21\u578b\u5df2\u7ecf\u5728\u76ee\u6807\u4f4d\u7f6e\uff0c\u65e0\u9700\u521b\u5efa\u8f6f\u8fde\u63a5')\n",
+        "        else:\n",
+        "            if use_symlink:\n",
+        "                # create symbolic link\n",
+        "                create_symlink(\n",
+        "                    source_path=target_model_dist,  # openbayes \u7279\u6709\u7684\u76ee\u5f55\uff0c\u662f\u5916\u90e8\u6570\u636e\u96c6\u6302\u8f7d\u5230\u5f53\u524d\u955c\u50cf\u7684\u76ee\u5f55\uff0c\u7f16\u53f7\u4ece0~4\n",
+        "                    symlink_path=abs_models_dir,  # fast-dreambooth.ipynb\u7684 model download cell\u4e00\u822c\u4e0b\u8f7d\u6a21\u578b\u7684\u8def\u5f84\n",
+        "                    symlink_name=model_name  # \u6a21\u578b\u540d\u79f0\n",
+        "                )\n",
+        "                print('\u521b\u5efa\u7b26\u53f7\u94fe\u63a5\u5b8c\u6210\uff01')\n",
+        "            else:\n",
+        "                # copy file\n",
+        "                if not os.path.exists(model_path) or not check_file(model_path, os.path.getsize(target_model_dist)):\n",
+        "                    print('\u6b63\u5728\u8fdb\u884c\u590d\u5236...')\n",
+        "                    !cp $target_model_dist $abs_models_dir/$model_name\n",
+        "                    print('\u590d\u5236\u5b8c\u6210\uff01')\n",
+        "                else:\n",
+        "                    print(f'{model_name}\u7684\u6a21\u578b\u5df2\u7ecf\u5728\u76ee\u6807\u4f4d\u7f6e\uff0c\u65e0\u9700\u590d\u5236')\n",
+        "        return os.path.dirname(target_model_dist)\n",
+        "    else:\n",
+        "        print(f'\u4e0d\u5b58\u5728{model_name}')\n",
+        "        return None\n"
       ]
     },
     {
