--- a/ipynb/Kohya/Kohya-for-OpenBayes.ipynb
+++ b/ipynb/Kohya/Kohya-for-OpenBayes.ipynb
@@ -368,7 +368,10 @@
       "source": [
         "import os\n",
         "\n",
-        "project_name = 'Padmasambhava LoRA'\n",
+        "# \u6bcf\u6b21\u8bad\u7ec3\u8ba1\u5212\u90fd\u4e0d\u4e00\u6837\u7684\u914d\u7f6e\n",
+        "session_name = 'ThaiZhu'\n",
+        "\n",
+        "# \u76f8\u5bf9\u56fa\u5b9a\u7684\u914d\u7f6e\n",
         "training_sessions_name = 'training_sessions'\n",
         "\n",
         "# \u521b\u5efatraining_sessions\u6587\u4ef6\u5939\n",
@@ -376,17 +379,164 @@
         "if not os.path.exists(trainning_sessions_dir):\n",
         "    os.mkdir(trainning_sessions_dir)\n",
         "\n",
-        "# \u521b\u5efaproject_name\u6587\u4ef6\u5939\n",
-        "project_dir = os.path.join(trainning_sessions_dir, project_name)\n",
+        "# \u521b\u5efasession_name\u6587\u4ef6\u5939\n",
+        "project_dir = os.path.join(trainning_sessions_dir, session_name)\n",
         "if not os.path.exists(project_dir):\n",
         "    os.mkdir(project_dir)\n",
         "\n",
-        "# \u5728project_name\u76ee\u5f55\u4e0b\u521b\u5efaimage\u3001log\u3001model\u4e09\u4e2a\u6587\u4ef6\u5939\n",
-        "subdirs = ['image', 'log', 'model']\n",
+        "# \u5728project_name\u76ee\u5f55\u4e0b\u521b\u5efa\u5b50\u76ee\u5f55\n",
+        "subdirs = [\n",
+        "    'model', # \u6a21\u578b\u8f93\u51fa\n",
+        "    'image', # \u8bad\u7ec3\u96c6\n",
+        "    'reg' , # \u6b63\u5219\u5316\u56fe\u96c6\n",
+        "    'config' # \u914d\u7f6e\n",
+        "]\n",
+        "\n",
         "for subdir in subdirs:\n",
         "    subdir_path = os.path.join(project_dir, subdir)\n",
         "    if not os.path.exists(subdir_path):\n",
         "        os.mkdir(subdir_path)\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "b08b974a-4b62-472d-bbd5-ab6867489781",
+      "metadata": {},
+      "source": [
+        "# \u521b\u5efa\u6807\u51c6\u914d\u7f6e\u8868"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "9e67e58c-929b-422c-ba0a-9f5833608578",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import json,os\n",
+        "\n",
+        "standard_json = {\n",
+        "    \"pretrained_model_name_or_path\": \"\",\n",
+        "    \"v2\": False,\n",
+        "    \"v_parameterization\": False,\n",
+        "    \"logging_dir\": \"\",\n",
+        "    \"train_data_dir\": \"\",\n",
+        "    \"reg_data_dir\": \"\",\n",
+        "    \"output_dir\": \"\",\n",
+        "    \"max_resolution\": \"512,512\",\n",
+        "    \"learning_rate\": \"6e-5\",\n",
+        "    \"lr_scheduler\": \"cosine_with_restarts\",\n",
+        "    \"lr_warmup\": \"0\",\n",
+        "    \"train_batch_size\": 2,\n",
+        "    \"epoch\": 1,\n",
+        "    \"save_every_n_epochs\": 1,\n",
+        "    \"mixed_precision\": \"bf16\",\n",
+        "    \"save_precision\": \"bf16\",\n",
+        "    \"seed\": \"1234\",\n",
+        "    \"num_cpu_threads_per_process\": 2,\n",
+        "    \"cache_latents\": True,\n",
+        "    \"caption_extension\": \".txt\",\n",
+        "    \"enable_bucket\": False,\n",
+        "    \"gradient_checkpointing\": False,\n",
+        "    \"full_fp16\": False,\n",
+        "    \"no_token_padding\": False,\n",
+        "    \"stop_text_encoder_training\": 0,\n",
+        "    \"xformers\": True,\n",
+        "    \"save_model_as\": \"safetensors\",\n",
+        "    \"shuffle_caption\": False,\n",
+        "    \"save_state\": False,\n",
+        "    \"resume\": \"\",\n",
+        "    \"prior_loss_weight\": 1.0,\n",
+        "    \"text_encoder_lr\": \"7e-6\",\n",
+        "    \"unet_lr\": \"6e-5\",\n",
+        "    \"network_dim\": 128,\n",
+        "    \"lora_network_weights\": \"\",\n",
+        "    \"color_aug\": False,\n",
+        "    \"flip_aug\": False,\n",
+        "    \"clip_skip\": 1,\n",
+        "    \"gradient_accumulation_steps\": 1.0,\n",
+        "    \"mem_eff_attn\": False,\n",
+        "    \"output_name\": \"\",\n",
+        "    \"model_list\": \"custom\",\n",
+        "    \"max_token_length\": \"75\",\n",
+        "    \"max_train_epochs\": \"20\",\n",
+        "    \"max_data_loader_n_workers\": \"1\",\n",
+        "    \"network_alpha\": 64,\n",
+        "    \"training_comment\": \"\",\n",
+        "    \"keep_tokens\": \"0\",\n",
+        "    \"lr_scheduler_num_cycles\": \"\",\n",
+        "    \"lr_scheduler_power\": \"\",\n",
+        "    \"persistent_data_loader_workers\": True,\n",
+        "    \"bucket_no_upscale\": True,\n",
+        "    \"random_crop\": False,\n",
+        "    \"bucket_reso_steps\": 64.0,\n",
+        "    \"caption_dropout_every_n_epochs\": 0.0,\n",
+        "    \"caption_dropout_rate\": 0,\n",
+        "    \"optimizer\": \"Lion\",\n",
+        "    \"optimizer_args\": \"\",\n",
+        "    \"noise_offset\": \"0.1\",\n",
+        "    \"LoRA_type\": \"Standard\",\n",
+        "    \"conv_dim\": 1,\n",
+        "    \"conv_alpha\": 1,\n",
+        "    \"sample_every_n_steps\": 0,\n",
+        "    \"sample_every_n_epochs\": 0,\n",
+        "    \"sample_sampler\": \"euler_a\",\n",
+        "    \"sample_prompts\": \"\",\n",
+        "    \"additional_parameters\": \"\"\n",
+        "}\n",
+        "\n",
+        "import datetime\n",
+        "\n",
+        "def generate_date():\n",
+        "    today = datetime.datetime.today()\n",
+        "    date_str = today.strftime(\"%m%d\")\n",
+        "    return date_str\n",
+        "\n",
+        "root_dir = '/openbayes/home'\n",
+        "\n",
+        "path_dict = {\n",
+        "    'pretrained_model_name_or_path': f'{root_dir}/base_model/chilloutmix_NiPrunedFp16.safetensors',\n",
+        "    'logging_dir': f'{root_dir}/tf_dir',\n",
+        "    'train_data_dir': f'{root_dir}/training_sessions/{session_name}/image',\n",
+        "    'reg_data_dir': f'{root_dir}/training_sessions/{session_name}/reg',\n",
+        "    'output_dir': f'{root_dir}/training_sessions/{session_name}/model',\n",
+        "    'output_name': f'{generate_date()}_SDL_{session_name}_0.4_Lion_Deepbooru_Dataset_10',\n",
+        "}\n",
+        "\n",
+        "standard_json.update(path_dict)\n",
+        "\n",
+        "def save_json_to_file(data, file_path):\n",
+        "    # \u83b7\u53d6\u4fdd\u5b58\u76ee\u5f55\u7684\u7236\u76ee\u5f55\n",
+        "    parent_dir = os.path.dirname(file_path)\n",
+        "    \n",
+        "    # \u5982\u679c\u76ee\u5f55\u4e0d\u5b58\u5728\uff0c\u5c31\u521b\u5efa\u76ee\u5f55\n",
+        "    if not os.path.exists(parent_dir):\n",
+        "        os.makedirs(parent_dir)\n",
+        "    \n",
+        "    # \u5c06\u6570\u636e\u4fdd\u5b58\u5230\u6307\u5b9a\u6587\u4ef6\u8def\u5f84\n",
+        "    with open(file_path, 'w') as f:\n",
+        "        json.dump(data, f)\n",
+        "        \n",
+        "config_path = os.path.join(root_dir,training_sessions_name,session_name,'config','default.json')\n",
+        "save_json_to_file(standard_json, config_path)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "5bbf4c47-09c5-4761-ab19-3c5c9c487467",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import json\n",
+        "\n",
+        "def read_and_print_json(file_path):\n",
+        "    with open(file_path) as f:\n",
+        "        data = json.load(f)\n",
+        "        print(json.dumps(data, indent=4))\n",
+        "\n",
+        "file_path = \"/openbayes/home/training_sessions/LoRA/config/0318_SDL_ThaiZhu_0.4_Lion_Deepbooru_Dataset_10.json\"\n",
+        "read_and_print_json(file_path)\n"
       ]
     },
     {
