--- a/nbfunc/installer.ipynb
+++ b/nbfunc/installer.ipynb
@@ -95,7 +95,7 @@
         "    \u8fd4\u56de\uff1a\n",
         "    \u65e0\u8fd4\u56de\u503c\n",
         "    \"\"\"\n",
-        "\n",
+        "    \n",
         "    # \u83b7\u53d6\u7528\u4e8e\u5b58\u50a8\u514b\u9686\u4ee3\u7801\u7684\u76ee\u5f55ext_dir\uff08\u901a\u8fc7\u8c03\u7528getExtDir()\u51fd\u6570\u5b9e\u73b0\uff09\u3002\n",
         "    ext_dir = getExtDir()\n",
         "\n",
@@ -149,9 +149,13 @@
         "    \u8fd4\u56de\uff1a\n",
         "    \u65e0\u8fd4\u56de\u503c\n",
         "    \"\"\"\n",
-        "\n",
+        "    def getExtDir():\n",
+        "        webUIDir = find_file('/', 'stable-diffusion-webui')\n",
+        "        extDir = find_file(webUIDir, 'extensions')\n",
+        "        return extDir\n",
         "    # \u83b7\u53d6\u7528\u4e8e\u5b58\u50a8\u514b\u9686\u4ee3\u7801\u7684\u76ee\u5f55ext_dir\uff08\u901a\u8fc7\u8c03\u7528getExtDir()\u51fd\u6570\u5b9e\u73b0\uff09\u3002\n",
         "    ext_dir = getExtDir()\n",
+        "    print(ext_dir)\n",
         "\n",
         "    # \u4eceGit\u4ed3\u5e93\u7684URL\u4e2d\u63d0\u53d6\u51fa\u4ee3\u7801\u5e93\u7684\u540d\u79f0repo_name\uff0c\u5e76\u4ece\u4e2d\u79fb\u9664.git\u540e\u7f00\u3002\n",
         "    repo_name = url.split(\"/\")[-1].replace(\".git\", \"\")\n",
