--- a/nbfunc/mounter.ipynb
+++ b/nbfunc/mounter.ipynb
@@ -17,7 +17,19 @@
       "source": [
         "import os\n",
         "\n",
-        "def find_file(root_dir, target_name):\n",
+        "def find_file(root, target):\n",
+        "    # \u4e0b\u9762\u7684\u547d\u4ee4\u4f1a\u5c06\u6807\u51c6\u9519\u8bef\u8f93\u51fa\u91cd\u5b9a\u5411\u5230/dev/null\uff0c\u8fd9\u6837\u5c31\u4f1a\u6291\u5236\u9519\u8bef\u4fe1\u606f\u3002\n",
+        "    # \u8fd9\u91cc\u7684\u76ee\u7684\u662f\u5ffd\u7565\u6807\u51c6\u9519\u8bef\u8f93\u51fa\u4e2d\u53ef\u80fd\u4ea7\u751f\u7684\u91cd\u5b9a\u5411\u9519\u8bef\u4fe1\u606f\u3002\n",
+        "    target_list = !find $root -name $target 2>/dev/null\n",
+        "    # target_list = list(filter(lambda x: x.endswith('.whl'), target))\n",
+        "    print(target_list)\n",
+        "    if target_list:\n",
+        "        target_path = target_list[0]\n",
+        "        return target_path\n",
+        "    else:\n",
+        "        return None\n",
+        "\n",
+        "def find_file_list(root_dir, target_name):\n",
         "    paths = []\n",
         "    for dirpath, dirnames, filenames in os.walk(root_dir, topdown=True):\n",
         "        if target_name in filenames:\n",
@@ -162,14 +174,14 @@
         "        # print(nas_list)\n",
         "        \n",
         "        for i in nas_list:  \n",
-        "            file_list = find_file(f'{i}', model_name)\n",
+        "            file_list = find_file_list(f'{i}', model_name)\n",
         "            if file_list:\n",
         "                break\n",
         "            else:\n",
         "                continue\n",
         "    elif env_name == 'OpenBayes':\n",
         "        for i in range(0, 5):  # \u5728input\u4e2d\u8fdb\u884c\u641c\u7d22\n",
-        "            file_list = find_file(f'/input{i}', model_name)\n",
+        "            file_list = find_file_list(f'/input{i}', model_name)\n",
         "            if file_list:\n",
         "                break\n",
         "            else:\n",
